# wa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  handler.py  infra.py  main.py  pyproject.toml  run.py  send copy.py
wa/: __init__.py  agents.py  app.py  blob.py  config.py  deps.py  dynamo.py  lifespan.py  logs.py  models.py  routes.py  store.py  utils.py  whatsapp.py
wa/agents/: __init__.py  cron.py  log.py  main.py  math.py  todos.py
wa/dynamo/: __init__.py  cron.py  messages.py  tools.py  whatsapp.py
wa/whats/: client.py
