[project]
name = "wa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.40",
    "pydantic-settings>=2.8.1",
    "pynamodb>=6.0.2",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.184.1",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
]

[tool.mypy]
allow_redefinition = true

[tool.ruff]
target-version = "py313"

