[project]
name = "wa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.40",
    "pydantic-settings>=2.8.1",
    "types-boto3[s3]>=1.37.33",
    "pynamodb>=6.0.2",
    "pydantic-ai-slim[duckduckgo,openai]>=0.0.55",
    "croniter>=6.0.0",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.184.1",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
    "cdklabs-generative-ai-cdk-constructs>=0.1.299",
    "pyright>=1.1.399",
    "pylance>=0.25.2",
    "awscli-local>=0.22.0",
    "types-boto3[dynamodb,lambda,s3]>=1.37.33",
]

[tool.mypy]
allow_redefinition = true

[tool.ruff]
target-version = "py313"
